[project]
name = "user-notification-system"
version = "0.1.0"
description = ""
authors = [
    {name = "breynisson",email = "bjorgvin.reynisson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio (>=1.69.0,<2.0.0)",
    "grpcio-tools (>=1.69.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "user_notification_system" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
hypothesis = "^6.124.2"
allure-pytest = "^2.9.45"
pytest-asyncio = "0.25.2"

[tool.pytest.ini_options]
pythonpath = [
    ".", "generated"
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry.scripts]
generate-grpc = "user_notification_system.generate_grpc:generate_protos"
start-server = "user_notification_system.server:main"
send-message = "user_notification_system.client:send_message"
fetch-client-status = "user_notification_system.client:get_client_status"
fetch-all-statuses = "user_notification_system.client:get_all_client_statuses"
pytest-allure = "user_notification_system.test_runner:run_tests_allure"
generate-allure-report = "user_notification_system.report_generator:generate_allure_report"


